Revision history for Github-Fork-Parent

0.10    2010-01-12
        Add 'github_parent_author'
        Fix error in test

0.01    2009-11-08
        First version.
