@@ -13,3 +13,4 @@ Github-Fork-Parent-*
 Makefile.PL
 META.yml
 MYMETA.yml
+test.pl
