@@ -3,7 +3,7 @@
 use 5.006;
 use strict;
 use warnings;
-use Test::More tests => 3;
+use Test::More tests => 4;
 use LWP::Online ':skip_all';
 use Github::Fork::Parent;
 
@@ -15,5 +15,9 @@ is(github_parent('git@github.com:chorny/test-more.git'),
  'http://github.com/schwern/test-more');
 is(github_parent_author('git@github.com:chorny/test-more.git'),
  'schwern');
+
+my @l=Github::Fork::Parent::parse_github_links('https://github.com/schwern/test-more');
+is($l[0], 'schwern');
+
 
 # (c) Alexandr Ciornii, 2009-2010
