@@ -4,7 +4,7 @@ use 5.006;
 use strict;
 use warnings;
 use lib 'lib';
-use Test::More tests => 3;
+use Test::More tests => 4;
 use Github::Fork::Parent;
 
 is(github_parent('git://github.com/chorny/cgi-session.git'),
@@ -17,5 +17,7 @@ is(github_parent('git@github.com:chorny/test-more.git'),
 is(github_parent_author('git@github.com:chorny/test-more.git'),
  'schwern');
 
+my @l=Github::Fork::Parent::parse_github_links('https://github.com/schwern/test-more.git');
+is($l[0], 'schwern');
 
 # (c) Alexandr Ciornii, 2009
